# chat-explore

./: .gitignore  .pre-commit-config.yaml  License.txt  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: pr-checks.yml
data/: Battlebay - Daily Activity - ENIGMA - 10April2019.xlsx  clean_input.txt  input.txt
docs/superpowers/plans/: 2026-05-10-pr-checks.md
docs/superpowers/specs/: 2026-05-10-pr-checks-design.md
html_template/: index.html  style.css
notebooks/: explore-chat.ipynb
src/: action_logging.py  delete_files.py  explore.py  generate_html.py  get_excel.py  get_translation.py  llm.py  logger.py  plot.py  plot_progression.py  plot_user.py  preprocess.py  response.py  run.py  sentiment_analysis.py  user.py
src/analysis/: sentiment_analysis.py
src/core/: parser.py  preprocess.py  response.py  user.py
src/integrations/: get_translation.py  llm.py
src/output/: generate_html.py  get_excel.py
src/plotting/: plot.py  plot_progression.py  plot_user.py
src/utils/: action_logging.py  delete_files.py  helpers.py  metrics_store.py
tests/: conftest.py  test_io.py  test_parser.py  test_response.py  test_sentiment_analysis.py
