[project]
name = "chat-explore"
version = "0.1.0"
description = "Generate WhatsApp chat statistics and infographic outputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "matplotlib==3.10.9",
    "nltk==3.9.4",
    "numpy==2.4.4",
    "openpyxl>=3.1.5",
    "pandas==3.0.2",
    "pyclean>=3.6.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "tldextract==5.3.1",
    "twython==3.9.1",
    "whatsappchattodf==0.1.3",
    "wordcloud==1.9.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
